# aws-robomaker-sample-application-roverrobotics

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bno055_usb_stick/lib/bno055_usb_stick/: bno055_usb_stick_node
install/bno055_usb_stick/lib/pkgconfig/: bno055_usb_stick.pc
install/bno055_usb_stick/share/bno055_usb_stick/: package.sh
install/bno055_usb_stick_msgs/include/bno055_usb_stick_msgs/: Output.h
install/bno055_usb_stick_msgs/lib/pkgconfig/: bno055_usb_stick_msgs.pc
install/bno055_usb_stick_msgs/share/bno055_usb_stick_msgs/: package.ps1  package.sh  package.zsh
install/localization/lib/pkgconfig/: localization.pc
install/localization/share/localization/: package.sh
install/reset_amcl_pose/lib/pkgconfig/: reset_amcl_pose.pc
install/reset_amcl_pose/share/reset_amcl_pose/: package.bash  package.ps1  package.sh  package.zsh
install/rr_control_input_manager/lib/pkgconfig/: rr_control_input_manager.pc
install/rr_control_input_manager/share/rr_control_input_manager/: package.bash  package.sh
install/rr_openrover_basic/include/rr_openrover_basic/: RawRrOpenroverBasicMedRateData.h  SmartBatteryStatus.h
install/rr_openrover_basic/lib/rr_openrover_basic/: openrover_basic_node
install/rr_openrover_basic/share/rr_openrover_basic/: package.bash  package.ps1  package.sh  package.zsh
install/scan_correction/share/scan_correction/: package.sh  package.zsh
install/simulation_app/lib/pkgconfig/: simulation_app.pc
install/simulation_app/share/simulation_app/: package.bash  package.sh  package.xml
install/swag_demo_state_machine/share/swag_demo_state_machine/: package.sh
install/tshirt_dispense_msgs/include/tshirt_dispense_msgs/: TShirtDispenseActionResult.h  TShirtDispenseGoal.h
log/: latest_build
robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/install/tshirt_dispense_msgs/share/tshirt_dispense_msgs/: package.ps1  package.sh  package.xml
robot_ws/install/tshirt_dispense_msgs/share/tshirt_dispense_msgs/actions/: TShirtDispense.action
robot_ws/install/tshirt_dispense_msgs/share/tshirt_dispense_msgs/cmake/: tshirt_dispense_msgs-msg-paths.cmake  tshirt_dispense_msgsConfig.cmake
robot_ws/install/tshirt_dispense_msgs/share/tshirt_dispense_msgs/msg/: TShirtDispenseActionGoal.msg  TShirtDispenseFeedback.msg  TShirtDispenseResult.msg
robot_ws/log/: latest_build  latest_bundle  latest_info  latest_version-check
robot_ws/src/: .gitignore  .gitmodules
robot_ws/src/bno055_usb_stick/: CMakeLists.txt
robot_ws/src/localization/: CMakeLists.txt
robot_ws/src/localization/launch/: amcl.launch  gmapping.launch  odom_only.launch  simulation.launch
robot_ws/src/localization/maps/: asym_arena.pgm
robot_ws/src/reset_amcl_pose/: CMakeLists.txt
robot_ws/src/rr_control_input_manager/: CMakeLists.txt
robot_ws/src/rr_openrover_basic/: CMakeLists.txt
robot_ws/src/scan_correction/: CMakeLists.txt
robot_ws/src/scan_correction/scripts/: scan_correction.py
robot_ws/src/swag_demo_state_machine/: CMakeLists.txt
robot_ws/src/tshirt_dispense_msgs/: CMakeLists.txt
robot_ws/src/tshirtbot/: CMakeLists.txt  setup.py
robot_ws/src/tshirtbot/config/: config.yaml
robot_ws/src/tshirtbot/launch/: get_tshirt.launch
robot_ws/src/tshirtbot/scripts/: get_tshirt_server.py
simulation_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
simulation_ws/install/simulation_app/share/simulation_app/: package.ps1  package.sh  package.xml  package.zsh
simulation_ws/install/simulation_app/share/simulation_app/cmake/: simulation_appConfig.cmake
simulation_ws/install/simulation_app/share/simulation_app/launch/: spawn_rover.launch  spawn_turtlebot.launch
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_DeskA_01/meshes/: aws_robomaker_warehouse_DeskA_01_collision.DAE
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_DeskB_01/: model.config  model.sdf
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_Ground_01/meshes/: aws_robomaker_warehouse_Ground_01_collision.DAE
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_Roadblock_01/meshes/: aws_robomaker_warehouse_Roadblock_01_visual.DAE
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_ShelfB_01/: model.sdf
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_ShelfB_01/meshes/: aws_robomaker_warehouse_ShelfB_01_visual.DAE
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_ShelfC_01/: model.config  model.sdf
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_ShelfC_01/meshes/: aws_robomaker_warehouse_ShelfC_01_collision.DAE
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_ShelfF_01/meshes/: aws_robomaker_warehouse_ShelfF_01_visual.DAE
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_Sign_01/: model.sdf
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_Sign_01/meshes/: aws_robomaker_warehouse_Sign_01_visual.DAE
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_Wall_01/: model.config
simulation_ws/install/simulation_app/share/simulation_app/models/aws_robomaker_warehouse_Wall_01/meshes/: aws_robomaker_warehouse_Wall_01_visual.DAE
simulation_ws/install/simulation_app/share/simulation_app/models/remars_swagbot/: model.config  model.sdf
simulation_ws/install/simulation_app/share/simulation_app/urdf/: 2WD_Rover.gazebo.xacro  rover.urdf  rover.urdf.xacro
simulation_ws/install/simulation_app/share/simulation_app/worlds/: WareHouse_Light.world
simulation_ws/log/: latest_build  latest_bundle  latest_info
simulation_ws/src/2WD_Rover_app/: CMakeLists.txt
simulation_ws/src/simulation_app/: CMakeLists.txt
(+208 files in other folders)
