<?xml version="1.0"?>
<package format="2">
  <name>tshirt_dispense_msgs</name>
  <version>0.0.0</version>
  <description>The tshirt_dispense_msgs package</description>

  <maintainer email="nickp@todo.todo">nickp</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
